--- a/index.html
+++ b/index.html
@@ -1,10 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>My Awesome Homepage</title>
+    <!-- 引入一个示例的谷歌字体，可自由替换 -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+    <style>
+        /* 全局样式重置 */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        html, body {
+            height: 100%;
+            font-family: 'Montserrat', sans-serif;
+            color: #fff;
+            overflow-x: hidden;
+        }
+
+        /* 动画渐变背景 */
+        body {
+            background: linear-gradient(45deg, #6D5BBA, #8D58BF, #B36CB3, #F397B6);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        @keyframes gradientBG {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        /* 容器 */
+        .container {
+            max-width: 900px;
+            width: 90%;
+            margin: 20px auto;
+            text-align: center;
+        }
+
+        /* 主页顶部标题区 */
+        .hero-section {
+            margin-top: 40px;
+            margin-bottom: 60px;
+        }
+
+        .hero-section h1 {
+            font-size: 3em;
+            font-weight: 700;
+            margin-bottom: 20px;
+            letter-spacing: 1px;
+        }
+
+        .hero-section p {
+            font-size: 1.2em;
+            font-weight: 400;
+            margin: 0 auto 10px auto;
+            max-width: 600px;
+            line-height: 1.5;
+        }
+
+        #typewriter {
+            border-right: 2px solid #fff;
+            padding-right: 5px;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+
+        /* 简单的分区样式 */
+        section {
+            margin: 40px 0;
+            text-align: left;
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 30px;
+            border-radius: 10px;
+        }
+
+        section h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
+            text-align: center;
+            font-weight: 700;
+        }
+
+        section p {
+            font-size: 1em;
+            line-height: 1.6;
+            margin-bottom: 15px;
+        }
+
+        /* Projects 列表 */
+        .projects-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+
+        .project-item {
+            background-color: rgba(255, 255, 255, 0.2);
+            padding: 20px;
+            border-radius: 10px;
+            width: 220px;
+            text-align: center;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+        }
+
+        .project-item:hover {
+            transform: scale(1.05);
+            background-color: rgba(255, 255, 255, 0.3);
+        }
+
+        .project-item h3 {
+            margin-bottom: 10px;
+            font-size: 1.2em;
+        }
+
+        .project-item a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: 700;
+        }
+
+        /* 底部版权信息 */
+        .footer {
+            margin-top: 40px;
+            font-size: 0.9em;
+            opacity: 0.8;
+        }
+
+        /* 响应式 */
+        @media (max-width: 768px) {
+            .hero-section h1 {
+                font-size: 2.2em;
+            }
+
+            section {
+                padding: 20px;
+            }
+        }
+    </style>
 </head>
 <body>
-Hello, Github IO!
+
+<div class="container">
+    <!-- 主页顶部 -->
+    <div class="hero-section">
+        <h1>Hello, I'm <span id="typewriter">张小白菜</span></h1>
+        <p>Welcome to my personal corner on the internet!<br/>
+            Developer • Designer • Dreamer</p>
+    </div>
+
+    <!-- About 分区 -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>教育经历: 2016-2020 某某大学软件工程专业</p>
+        <p>工作经历: 2020-2021 某某科技有限公司</p>
+        <p>工作经历: 2021-2025 某某科技有限公司</p>
+    </section>
+
+    <!-- Projects 分区 -->
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="projects-list">
+            <div class="project-item">
+                <h3>Project A</h3>
+                <p>项目简要描述</p>
+                <a href="#" target="_blank">View More</a>
+            </div>
+            <div class="project-item">
+                <h3>Project B</h3>
+                <p>项目简要描述</p>
+                <a href="#" target="_blank">View More</a>
+            </div>
+            <div class="project-item">
+                <h3>Project C</h3>
+                <p>项目简要描述</p>
+                <a href="#" target="_blank">View More</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact 分区 -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>有问题或想要合作？欢迎通过以下方式联系我：</p>
+        <p>Email: <a href="mailto:yourmail@example.com" style="color:#fff; text-decoration: underline;">
+            zkaikang@example.com</a></p>
+        <p>GitHub: <a href="https://github.com/yourname" style="color:#fff; text-decoration: underline;">
+            github.com/zhangkkan</a></p>
+    </section>
+
+    <!-- 页脚 -->
+    <div class="footer">
+        &copy; 2025 Your Name. All Rights Reserved.
+    </div>
+</div>
+
+<!-- 简单打字机效果的脚本（纯原生JS） -->
+<script>
+    const textArray = [
+        "John Doe",
+        "a Developer",
+        "a Designer",
+        "a Dreamer"
+    ];
+    let textIndex = 0;
+    let charIndex = 0;
+    const typingSpeed = 120;   // 打字速度，毫秒
+    const eraseSpeed = 80;     // 回退速度，毫秒
+    const delayBetween = 1000; // 句子之间的停顿
+
+    const typewriterElement = document.getElementById("typewriter");
+
+    function type() {
+        if (charIndex < textArray[textIndex].length) {
+            // 继续打字
+            typewriterElement.textContent += textArray[textIndex].charAt(charIndex);
+            charIndex++;
+            setTimeout(type, typingSpeed);
+        } else {
+            // 句子打完后，稍等一下再回退
+            setTimeout(erase, delayBetween);
+        }
+    }
+
+    function erase() {
+        if (charIndex > 0) {
+            // 回退
+            typewriterElement.textContent = textArray[textIndex].substring(0, charIndex - 1);
+            charIndex--;
+            setTimeout(erase, eraseSpeed);
+        } else {
+            // 当前句子完全清空后，切换到下一个句子
+            textIndex = (textIndex + 1) % textArray.length;
+            setTimeout(type, 500);
+        }
+    }
+
+    // 页面加载后开始打字
+    window.addEventListener("DOMContentLoaded", () => {
+        type();
+    });
+</script>
 </body>
 </html>
